# receipts

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: gamed_task.yaml  task.yaml
src/receipts/: __init__.py  antigaming.py  cli.py  spec.py  verdict.py
src/receipts/probes/: __init__.py  base.py  file.py  http.py  shell.py  tests.py
tests/: test_antigaming.py  test_probes.py  test_spec.py  test_verdict.py
